<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.ForgotPasswordFragment">

    <ImageView
        android:id="@+id/img_backgroundForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/top_view_sea"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#66000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/label_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="230dp"
        android:background="@drawable/rect_top_radius"
        android:backgroundTint="#D9FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/img_backgroundForgotPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/img_lock"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/ic_lock"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/green_900" />

        <TextView
            android:id="@+id/label_text_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/text_forgot_password"
            android:textAlignment="center"
            android:textColor="?attr/colorOnSecondary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/img_lock" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_forgot_password_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:boxStrokeWidth="3dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_reset_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_text_forgot_password">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email_forgot_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="#00FFFFFF"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/green_a100"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/reset_password"
            android:textColor="@color/green_900"
            app:cornerRadius="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_forgot_password_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>