<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mountains"
    tools:context=".ui.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="62dp"
        android:background="@drawable/rect_all_radius"
        android:backgroundTint="#C9FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn_save_changes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:backgroundTint="@color/green_a100"
            android:insetTop="0dp"
            android:insetBottom="0dp"
            android:text="@string/save_changes"
            android:textColor="@color/green_900"
            app:cornerRadius="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/change_password_layout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_email_profile_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:boxStrokeWidth="1dp"
            app:layout_constraintBottom_toTopOf="@+id/change_password_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_name_profile_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:hint="@string/email"
                android:inputType="textWebEmailAddress|textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/et_name_profile_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            app:boxStrokeWidth="1dp"
            app:layout_constraintBottom_toTopOf="@+id/et_email_profile_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/label_profile">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00FFFFFF"
                android:hint="@string/name"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/label_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="PROFILE"
            android:textColor="@color/green_900"
            android:textSize="24sp"
            android:textStyle="bold|italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/change_password_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="1dp"
            android:background="@drawable/rect_radius_right"
            android:elevation="10dp"
            app:layout_constraintBottom_toTopOf="@+id/btn_save_changes"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_email_profile_layout">

            <TextView
                android:id="@+id/label_change_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="24dp"
                android:text="@string/change_password"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.501" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:src="@drawable/ic_lock"
                app:layout_constraintBottom_toBottomOf="@+id/label_change_password"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/label_change_password" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="16dp"
                android:src="@drawable/ic_arrow_right"
                app:layout_constraintBottom_toBottomOf="@+id/label_change_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/label_change_password"
                app:layout_constraintTop_toTopOf="@+id/label_change_password" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>